# Auto-meta-heuristic-with-transformers

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  instruction.txt  pyproject.toml  setup.py
CI_module/: compile.py
include/: readme.txt
researchWorkspace/auto-metaheuristic/: ResearchArchitect.md
researchWorkspace/prof_tsai_metaheuristic_algos/c++/: ch05-search.sh  ch06-search.sh  ch12-search.sh  ch14-search.sh  ch17-search.sh  do_all.sh
researchWorkspace/prof_tsai_metaheuristic_algos/c++/0-es/1-onemax/: es_search.cpp
researchWorkspace/prof_tsai_metaheuristic_algos/c++/0-es/2-deception/: es_search.cpp  es_search.h
researchWorkspace/prof_tsai_metaheuristic_algos/c++/1-onemax/main/: ga.h  hc_r.h  lib.h  main.cpp  sa_refinit.h
researchWorkspace/prof_tsai_metaheuristic_algos/c++/2-deception/main/: gar.h  gardp.h  hc.h  hcdp_r.h  hcdp_rm.h  sadp.h  ts.h  tsdp.h
researchWorkspace/prof_tsai_metaheuristic_algos/c++/3-tsp/: Makefile
researchWorkspace/prof_tsai_metaheuristic_algos/c++/3-tsp/main/: aco.h  ga.h  gacx.h  gals.h  main.cpp  sa.h
researchWorkspace/prof_tsai_metaheuristic_algos/c++/4-function/main/: deb1.h  decb1.h  functions.h
researchWorkspace/prof_tsai_metaheuristic_algos/c++/5-eval/main/: ga.h  gar.h  garx2.h
researchWorkspace/prof_tsai_metaheuristic_algos/c++/6-clustering/: abalone.data  iris.data
researchWorkspace/prof_tsai_metaheuristic_algos/c++/6-clustering/main/: main.cpp
researchWorkspace/prof_tsai_metaheuristic_algos/python/0-es/2-deception/: es.py
researchWorkspace/prof_tsai_metaheuristic_algos/python/1-onemax/: gax2.py  hc_r.py  sa.py  sa_refinit.py  se.py
researchWorkspace/prof_tsai_metaheuristic_algos/python/2-deception/: gardp.py  lib.py  sadp.py  tsdp.py
researchWorkspace/prof_tsai_metaheuristic_algos/python/3-tsp/: aco.py  gacx.py  gals.py  pr1002.tsp.opt
researchWorkspace/prof_tsai_metaheuristic_algos/python/4-function/: decb1.py  der2.py
researchWorkspace/prof_tsai_metaheuristic_algos/python/5-eval/: ga.py  gar.py  garx2.py
researchWorkspace/prof_tsai_metaheuristic_algos/python/6-clustering/: iris.data
research_workspace/auto-metaheuristic/: (discard)ResearchArchitect.md  Ideas.md  ResearchArchitect.md  ResearchArchitecture.md
research_workspace/auto-metaheuristic/exp_result/CEC2021/CEC_2021_F10_10D_500iter_6Ep/: config.txt  log.txt  output.txt
research_workspace/auto-metaheuristic/exp_result/CEC2021/CEC_2021_F1_10D_500iter_6Ep/: config.txt  log.txt  output.txt
research_workspace/auto-metaheuristic/exp_result/CEC2021/CEC_2021_F2_10D_500iter_6Ep/: config.txt  log.txt  output.txt
research_workspace/auto-metaheuristic/exp_result/CEC2021/CEC_2021_F3_10D_500iter_6Ep/: config.txt  log.txt  output.txt
research_workspace/auto-metaheuristic/exp_result/CEC2021/CEC_2021_F4_10D_500iter_6Ep/: config.txt  log.txt  output.txt
research_workspace/auto-metaheuristic/exp_result/CEC2021/CEC_2021_F5_10D_500iter_6Ep/: config.txt  log.txt  output.txt
research_workspace/auto-metaheuristic/exp_result/CEC2021/CEC_2021_F6_10D_500iter_6Ep/: config.txt  log.txt  output.txt
research_workspace/auto-metaheuristic/exp_result/CEC2021/CEC_2021_F7_10D_500iter_6Ep/: config.txt  log.txt  output.txt
research_workspace/auto-metaheuristic/exp_result/CEC2021/CEC_2021_F8_10D_500iter_6Ep/: config.txt  log.txt  output.txt
research_workspace/auto-metaheuristic/exp_result/CEC2021/CEC_2021_F9_10D_500iter_6Ep/: log.txt  output.txt
research_workspace/auto-metaheuristic/markdown_source/: (Discard)Automated_meta-heuristic_workflow_chart.drawio  Auto-meta-heuristic_workflow_chart.drawio.drawio
research_workspace/auto-metaheuristic/markdown_source/HH/: Hyper-heuristic_workflow_chart.drawio
research_workspace/auto-metaheuristic/markdown_source/automated-MH/: Automated_meta-heuristic_workflow_chart.drawio
research_workspace/auto-metaheuristic/paper_reference/: 2017-0910-How to do a good research_r1.pptx  manuscript.tex
research_workspace/prof_tsai_metaheuristic_algos/c++/: Makefile  ch03-search.sh  ch07-search.sh  ch08-search.sh  ch09-search.sh  ch10-search.sh  ch11-search.sh  ch15-search.sh  ch16-search.sh  ch18-search.sh  chaa-search.sh  search.conf
research_workspace/prof_tsai_metaheuristic_algos/c++/0-es/: Makefile
research_workspace/prof_tsai_metaheuristic_algos/c++/1-onemax/: Makefile
research_workspace/prof_tsai_metaheuristic_algos/c++/6-clustering/: Makefile
research_workspace/prof_tsai_metaheuristic_algos/python/1-onemax/: hc.py  ts.py
research_workspace/prof_tsai_metaheuristic_algos/python/2-deception/: gadp.py  hcdp.py  hcdp_r.py  hcdp_rm.py
research_workspace/prof_tsai_metaheuristic_algos/python/3-tsp/: eil51.tsp.opt  ga.py  gaox.py  gapmx.py  hga.py  pga.py  pr1002.tsp  sa.py
research_workspace/prof_tsai_metaheuristic_algos/python/4-function/: de.py  deb1.py  deb2.py  functions.py  pso.py
research_workspace/prof_tsai_metaheuristic_algos/python/5-eval/: garxu.py  gaxu.py
research_workspace/prof_tsai_metaheuristic_algos/python/6-clustering/: ga.py  prega.py
src/: codeStructure.drawio  designPattern.md
src/cpp/: BES.cpp  CHGWOSCA.cpp  ChOA.cpp  DE.cpp  GA.cpp  GWO.cpp  HHO.cpp  PSO.cpp  SCSO.cpp  hyper.cpp
src/meta-heuristic_algos/: ConfigClass.py  DataSet.py  main.py
src/meta-heuristic_algos/optimizers/: DE.py  GA.py  GWO.py  HHO.py  PSO.py  SA.py  TABU.py
src/meta_heuristic_algos/: (Discard)DataSet.py  Config.py  Optimizer.py  hyperheuristic.py  main.py
src/meta_heuristic_algos/algos/: BES.py  CHGWOSCA.py  ChOA.py  DE.py  EDGWO.py  GA.py  GWO.py  HHO.py  MSGWO.py  PSO.py  REEGWO.py  REINEDGWO.py  SA.py  SCSO.py  TABU.py
src/meta_heuristic_algos/optimizers/: BES.py  ChOA.py  DE.py  GWO.py  REEGWO.py  REINEDGWO.py  SA.py  SCSO.py  TABU.py
src/python/: Config.py  Optimizer.py  hyperheuristic.py  main.py
src/python/algos/: BES.py  CHGWOSCA.py  ChOA.py  DE.py  EDGWO.py  GA.py  GWO.py  HHO.py  MSGWO.py  PSO.py  REEGWO.py  REINEDGWO.py  SA.py  SCSO.py  TABU.py
tests/: de_test.py
(+114 files in other folders)
