[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-meta-heuristic"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
# '命令名稱 = 模組路徑:函式名稱'
build = "CI_module.compile:compile_ext"

[tool.setuptools]
packages = ["CI_module"]